# misokoban

./: Makefile  README.md  app.cabal  cabal.project  docker.nix  hie.yaml  nixpkgs.nix
.github/workflows/: main.yml
src/: Component.hs  Game.hs  GeneratedWorlds.hs  Model.hs  World.hs  app.hs
src-imgproc/: ImageProcessing.hs  gen-worlds.hs  mean-asset.hs
static/: index.html
