cabal-version:    3.0
name:             misokoban
version:          0.1

common options
  default-language:
    GHC2021
  default-extensions:
    CPP
    TemplateHaskell 

  if arch(wasm32)
    ghc-options:
      -Wall -O2 -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
    cpp-options:
      -DWASM
  else
    ghc-options:
      -Wall -O2 -ddump-splices

executable app
  import:
    options
  hs-source-dirs:
    src
  main-is:
    app.hs
  other-modules:
    Component
    GeneratedWorlds
    Model
    Game
    World
  build-depends:
    base,
    containers,
    jsaddle,
    lens,
    miso,
    vector

executable gen-worlds
  import:
    options
  hs-source-dirs:
    src
    src-imgproc
  main-is:
    gen-worlds.hs
  other-modules:
    ImageProcessing
    World
  build-depends:
    base,
    Color,
    containers,
    directory,
    massiv,
    massiv-io,
    miso,
    vector

executable mean-asset
  import:
    options
  hs-source-dirs:
    src
    src-imgproc
  main-is:
    mean-asset.hs
  other-modules:
    ImageProcessing
    World
  build-depends:
    base,
    Color,
    containers,
    massiv,
    massiv-io,
    miso,
    vector

